@@ -92,7 +92,7 @@ namespace ACE_TMCast
         in_control_.push (MessagePtr (new Terminate));
       }
 
-      if (ACE_OS::thr_join (thread_, &thread_, 0) != 0) ::abort ();
+      if (ACE_OS::thr_join (thread_, 0) != 0) ::abort ();
 
       // cerr << "Scheduler is down." << endl;
     }
